# robo-ai-book

./: .dockerignore  .gitignore  .nixpacks.toml  API_CONFIGURATION_README.md  AUTH_SETUP.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  Procfile  RAILWAY_DEPLOYMENT_SETUP.md  README.md  RELEASE_CHECKLIST.md  create_tables.py  create_tables_backend.py  deploy.bat  deploy.sh  deploy_to_railway.bat  deploy_to_railway.sh  drizzle.config.ts  main.py  package-lock.json  package.json  personalization_features.md  pyproject.toml  railway.json  requirements.txt  server.py  setup-ros2-humble.sh  setup.py  temp_config.txt  test_auth_endpoints.py  test_correct_endpoint.py  test_duplicate_signup.py  test_filtering.js  test_final_signup.py  test_new_user_signup.py  test_personalization.tsx  test_server.py  test_signup_endpoint.py  (+1 more)
backend/: $null  .env.example  .env.template  .gitignore  README.md  URDU_TRANSLATION_SETUP.md  add_password_column.py  check_all_connections.py  check_server.bat  check_server.py  check_table.py  create_tables.py  data-model.md  db_check.py  db_test.py  debug_host.py  debug_indexing.py  debug_server.py  debug_translation.py  drizzle.config.json  final_fix_server.py  fixed_server.py  index_sample_content.py  index_sample_content_fixed.py  plan.md  pyproject.toml  quickstart.md  requirements.txt  research.md  run_server.py  sample_book_content.json  server.py  simple_server.py  spec.md  start_server.py  tasks.md  temp_server.py  test_api_indexing.py  test_auth.py  test_chat.py  (+14 more)
backend/auth-service/: README.md  auth-debug.ts  auth.ts  create_db.py  create_local_db.py  index.ts  package-lock.json  package.json  sample-client.js  server.ts  test-db-connection.ts  test-env.ts  test-github-oauth.js  test-server.js  tsconfig.json
backend/docs/: api.md  auth-implementation.md  email_service.md  selected_text.md  web_integration.md
backend/migrations/: 0000_lethal_phalanx.sql  001_user_background_schema.sql
backend/scripts/: add_user_columns.py  check_user_columns.py  init_db.py  (+2 more)
(+348 files in other folders)
