[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "robo-ai-book-platform"
version = "1.0.0"
description = "Physical AI textbook platform with RAG chatbot"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: FastAPI",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "fastapi==0.127.0",
    "asyncpg==0.29.0",
    "sqlalchemy==2.0.23",
    "psycopg2-binary==2.9.9",
    "pydantic==2.12.5",
    "pydantic-settings==2.1.0",
    "uvicorn==0.34.2",
    "python-dotenv==1.0.0",
    "pytest==8.3.4",
    "httpx==0.28.1",
    "qdrant-client==1.16.2",
    "openai==1.57.4",
    "deep-translator==1.11.4",
    "aiosqlite==0.20.0",
    "async-timeout==4.0.3",
    "cohere==5.20.1",
    "bcrypt==4.0.1"
]

[project.scripts]
start = "server:deploy"